# coreason-sandbox

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  NOTICE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
docs/: architecture_and_utility.md  index.md  product_requirements.md
src/bronze/: __init__.py
src/bronze/utils/: __init__.py
src/coreason_sandbox/: __init__.py  artifacts.py  config.py  factory.py  logger.py  main.py  mcp.py  models.py  runtime.py  sandbox.py  session_manager.py  storage.py
src/coreason_sandbox/integrations/: vault.py  veritas.py
src/coreason_sandbox/models/: __init__.py  execution.py  files.py  models.py  result.py  results.py
src/coreason_sandbox/runtime/: __init__.py  abc.py  base.py  sandbox.py
src/coreason_sandbox/runtimes/: base.py  docker.py  e2b.py
src/coreason_sandbox/utils/: artifacts.py  logger.py  vault.py  veritas.py
src/fda_orange_book/: __init__.py  main.py
src/gold/: main.py
src/gold/coreason_sandbox/: __init__.py  config.py  factory.py  main.py  utils.py
src/gold/coreason_sandbox/runtimes/: docker.py  e2b.py
src/gold/coreason_sandbox/utils/: logger.py
src/silver/: interfaces.py
src/silver/interfaces/: sandbox.py
tests/: conftest.py  stress_test.py  stress_test_complex.py  test_architecture.py  test_artifacts.py  test_config.py  test_config_audit.py  test_config_audit_complex.py  test_core.py  test_coverage_reaper.py  test_docker_execute.py  test_docker_filesystem_edge_cases.py  test_docker_install.py  test_docker_io.py  test_docker_io_exceptions.py  test_docker_lifecycle.py  test_e2b.py  test_edge_cases.py  test_factory.py  test_import.py  test_imports.py  test_integration_filesystem_complex.py  test_integration_live.py  test_logger.py  test_main.py  test_main_complex.py  test_main_lifecycle.py  test_mcp.py  test_mcp_complex_scenarios.py  test_mcp_concurrency.py  test_mcp_failures.py  test_mcp_lifecycle.py  test_mcp_reaper_failure.py  test_mcp_validation.py  test_mcp_validation_edge_cases.py  test_models.py  test_placeholder.py  test_runtime.py  test_sandbox_async.py  test_sandbox_sync.py  (+9 more)
