[tool.poetry]
name = "coreason_sandbox"
version = "0.2.1"
description = "coreason-sandbox"
authors = ["Gowtham A Rao <gowtham.rao@coreason.ai>"]
license = "Prosperity-3.0"
readme = "README.md"
packages = [{include = "coreason_sandbox", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12, <3.15"
loguru = "^0.7.2"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
anyio = "^4.12.1"
httpx = "^0.28.1"
aiofiles = "^25.1.0"
docker = "^7.1.0"
e2b-code-interpreter = "^2.4.1"
boto3 = "^1.42.37"
mcp = "^1.26.0"
packaging = "^26.0"
coreason-identity = "^0.4.2"

[tool.poetry.scripts]
coreason-sandbox = "coreason_sandbox.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "^0.14.14"
pre-commit = "^4.5.1"
pytest-cov = "^7.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"
pytest-asyncio = "^1.3.0"
types-requests = "^2.31.0.20240406"
types-setuptools = "^80.10.0.20260124"
types-boto3 = "^1.42.37"
types-aiofiles = "^25.1.0.20251011"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "coreason_sandbox"
version = "0.2.1"
description = "coreason-sandbox"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason_sandbox"
Repository = "https://github.com/CoReason-AI/coreason_sandbox"
Documentation = "https://github.com/CoReason-AI/coreason_sandbox"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-report=html --cov-fail-under=100"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: marks tests as live integration tests (deselect with '-m \"not live\"')",
]

[tool.coverage.run]
omit = ["tests/*"]
